--- a/deel-1-flexbox-positioneren/styles/styles.css
+++ b/deel-1-flexbox-positioneren/styles/styles.css
@@ -1,1 +1,44 @@
 /*Schrijf hier jouw CSS*/
+.opdracht-1{
+    display: flex;
+    flex-direction: row;
+}
+
+.opdracht-2{
+    display: flex;
+    flex-direction: row;
+}
+
+.opdracht-3{
+    display: flex;
+    flex-direction: column;
+}
+
+.item1{
+    align-self: flex-start;
+
+}
+
+.item2{
+align-self: center;
+}
+
+.item3{
+    align-self: flex-end;
+
+}
+
+.opdracht-4{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.opdracht-5{
+    display: flex;
+    flex-direction: column;
+justify-content: space-evenly;
+
+}
+
