--- a/deel-2-flexbox-layout/opdracht-5/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-5/styles/styles.css
@@ -1,1 +1,17 @@
 /*Schrijf hier jouw CSS*/
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.container-2 {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    width: 1000px;
+    align-content: stretch;
+}
+
+/*doing my best but not pro on this yet and havent got too much time to sort it out*/
+
