--- a/deel-3-webpagina/styles/styles.css
+++ b/deel-3-webpagina/styles/styles.css
@@ -1,1 +1,34 @@
 /*Schrijf hier jouw css*/
+
+body {
+    display: flex;
+    flex-direction: column;
+    /*height: 100vh; */
+    background-color: beige;
+}
+
+.intro
+{
+    display: flex;
+    flex-direction: column;
+}
+
+nav{
+    border-color: red;
+    border-width: 2px;
+    display: flex;
+    row-gap: 20px;
+    height: 800px;
+    width: 800px;
+}
+
+p {
+    display: flex;
+    flex-direction: row;
+    background-color: rosybrown;
+    height: 300px;
+    width: 300px;
+    gap: 30px;
+    justify-content: space-around;
+
+}
